# sentiment-stock-prediction

./: .gitignore  .pre-commit-config.yaml  README.md  data sets.dvc  evaluate_lstm_lightning.py  export_to_tensorrt.py  export_to_tensorrt.sh  key.txt  modified-tine-431620-q4-a7aa4677816d.json  plot_lstm_lightning.py  pyproject.toml  train_lstm_lightning.py
.dvc/: config
configs/: config.yaml  mlflow.yaml  model.yaml  preprocessing.yaml  train.yaml  training.yaml
outputs/2025-06-07/23-39-59/.hydra/: config.yaml  hydra.yaml
triton/: README.md
